@@ -88,7 +88,8 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
    trunk
 =====================================
 - FIX: Wrong BuildException messages (findmodules) (IVY-1056)
-- FIX: PomModuleDescriptorBuilder does not resolve ejb type dependencies to jar extension (IVY-1058) (thanks to Andrey Lomakin)   
+- FIX: PomModuleDescriptorBuilder does not resolve ejb type dependencies to jar extension (IVY-1058) (thanks to Andrey Lomakin)
+- FIX: Ivy doesn't handle maven dependencies with type 'test-jar' correctly (IVY-1066)
 	
    2.1.0-rc1
 =====================================
